# byteblaster-rs

./: .dockerignore  .env.compose.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  TODO.md  compose.yml  dist-workspace.toml
crates/byteblaster-cli/: AGENTS.md  Cargo.toml  README.md
crates/byteblaster-cli/src/: default_servers.rs  error.rs  main.rs  output.rs  product_meta.rs
crates/byteblaster-cli/src/cmd/: capture.rs  dashboard.html  download.rs  event_output.rs  inspect.rs  mod.rs  server.rs  stream.rs
crates/byteblaster-cli/src/live/: config.rs  file_pipeline.rs  ingest.rs  mod.rs  server.rs  server_support.rs  shared.rs  stream.rs
crates/byteblaster-cli/src/live/server/: server_http.rs  server_ingest.rs  types.rs
crates/byteblaster-cli/src/live/stream/: capture.rs  common.rs  mod.rs  qbt.rs  wxwire.rs
crates/byteblaster-cli/src/product_meta/: mod.rs
crates/byteblaster-cli/src/relay/: auth.rs  config.rs  mod.rs  runtime.rs  server_list.rs  state.rs
crates/byteblaster-cli/tests/: cli_contract.rs  relay_contract.rs
crates/byteblaster-core/: AGENTS.md  Cargo.toml  README.md
crates/byteblaster-core/src/: config.rs  error.rs  lib.rs  runtime_support.rs
crates/byteblaster-core/src/client/: connection.rs  mod.rs  reconnect.rs  server_list_manager.rs  watchdog.rs
crates/byteblaster-core/src/file/: assembler.rs  mod.rs
crates/byteblaster-core/src/ingest/: mod.rs  model.rs  qbt_adapter.rs  receiver.rs  wxwire_adapter.rs
crates/byteblaster-core/src/protocol/: auth.rs  checksum.rs  codec.rs  compression.rs  mod.rs  model.rs  server_list.rs
crates/byteblaster-core/src/qbt_receiver/: config.rs  error.rs  mod.rs
crates/byteblaster-core/src/qbt_receiver/client/: mod.rs  reconnect.rs  server_list_manager.rs  watchdog.rs
crates/byteblaster-core/src/qbt_receiver/file/: assembler.rs  mod.rs
crates/byteblaster-core/src/qbt_receiver/protocol/: auth.rs  checksum.rs  codec.rs  compression.rs  mod.rs  model.rs  server_list.rs  server_list_wire.rs
crates/byteblaster-core/src/qbt_receiver/relay/: mod.rs  runtime.rs  state.rs
crates/byteblaster-core/src/qbt_receiver/stream/: mod.rs
crates/byteblaster-core/src/stream/: file_stream.rs  mod.rs  segment_stream.rs
crates/byteblaster-core/src/weather_wire/: client.rs  codec.rs  config.rs  error.rs  mod.rs  model.rs  transport.rs
crates/byteblaster-core/src/wxwire_receiver/: client.rs  codec.rs  config.rs  error.rs  mod.rs  model.rs  transport.rs
crates/byteblaster-core/tests/: ingest_unified.rs  live_capture_replay.rs  protocol_conformance.rs  protocol_parity.rs  protocol_prop.rs  qbt_receiver.rs  reconnect_failover.rs  relay_contract.rs
crates/byteblaster-core/tests/qbt_receiver/: protocol_parity.rs  protocol_prop.proptest-regressions  protocol_prop.rs  reconnect_failover.rs  relay_contract.rs
crates/byteblaster-core/tests/qbt_receiver/support/: mod.rs
crates/byteblaster-relay/: Cargo.toml
crates/byteblaster-relay/src/: main.rs
crates/byteblaster-relay/tests/: relay_contract.rs
crates/emwin-cli/: AGENTS.md  Cargo.toml  README.md
crates/emwin-cli/data/: pil_origin_safe.txt  product_catalog.csv
crates/emwin-cli/src/: default_servers.rs  error.rs  main.rs
crates/emwin-cli/src/cmd/: download.rs  event_output.rs  mod.rs
crates/emwin-cli/src/live/: archive_postprocess.rs  config.rs  file_pipeline.rs  filter.rs  ingest.rs  mod.rs  persistence.rs  server.rs  server_support.rs  shared.rs
crates/emwin-cli/src/live/server/: server_http.rs  server_ingest.rs  types.rs
crates/emwin-cli/src/live/stream/: common.rs  mod.rs
crates/emwin-cli/src/relay/: config.rs  mod.rs  runtime.rs
crates/emwin-db/: Cargo.toml
crates/emwin-db/migrations/: 0001_postgres_metadata.sql  0002_incidents.sql
crates/emwin-db/src/: error.rs  lib.rs  metadata.rs  postgres.rs  runtime.rs  writer.rs
crates/emwin-db/tests/: postgres_sink.rs
crates/emwin-parser/: AGENTS.md  Cargo.toml  README.md
crates/emwin-parser/data/: afos_routing_overrides.json  nwslid.json  product_catalog.json  text_product_catalog.json  ugc_counties.json  ugc_zones.json  wmo_offices.json
crates/emwin-parser/scripts/: generate_wmo_office_data.py
crates/emwin-parser/src/: cf6.rs  cwa.rs  dcp.rs  dsm.rs  enrich.rs  enrichment.rs  fd.rs  geo.rs  hml.rs  issue.rs  lib.rs  lsr.rs  metar.rs  mos.rs  parser.rs  pirep.rs  product.rs  projection.rs  sigmet.rs  taf.rs  time.rs  wwp.rs
crates/emwin-parser/src/body/: enrich.rs  hvtec.rs  latlon.rs  mod.rs  support.rs  time_mot_loc.rs  ugc.rs  vtec.rs  vtec_events.rs  wind_hail.rs
crates/emwin-parser/src/data/: generated.rs  generated_afos_routing.rs  generated_nwslid.rs  generated_pil.rs  generated_text_products.rs  generated_ugc.rs  generated_wmo_office.rs  graphics.rs  mod.rs
crates/emwin-parser/src/header/: enrich.rs  mod.rs  parser.rs
crates/emwin-parser/src/lookup/: mod.rs  pil_generated.rs
crates/emwin-parser/src/pipeline/: assemble.rs  candidate.rs  classify.rs  envelope.rs  mod.rs  normalize.rs
crates/emwin-parser/src/specialized/: cf6.rs  cli.rs  cwa.rs  dsm.rs  ero.rs  fd.rs  hml.rs  lsr.rs  mcd.rs  metar.rs  mod.rs  mos.rs  pirep.rs  saw.rs  sel.rs  sigmet.rs  spc_outlook.rs  taf.rs  wwp.rs
crates/emwin-parser/tests/: README.md  body_parser_integration.rs  body_smoke.rs  corpus_generic_convective.rs  corpus_generic_flood.rs  corpus_generic_marine.rs  corpus_generic_misc.rs  corpus_generic_non_precip.rs  corpus_generic_public_alerts.rs  corpus_specialized_advisories.rs  corpus_specialized_reports.rs  corpus_specialized_structured.rs  corpus_wmo.rs  generic_product_corpus.rs  specialized_product_corpus.rs  specialized_product_parity.rs  ugc_product_parity.rs  vtec_event_modeling.rs  vtec_hvtec_parity.rs  vtec_hvtec_regressions.rs  wmo_product_corpus.rs
crates/emwin-parser/tests/common/: mod.rs
crates/emwin-parser/tests/fixtures/specialized/: 202603100015-KBMX-NWUS54-LSRBMX.txt  202603100038-KZFW-FAUS24-CWAZFW.txt  202603102008-KWNS-WWUS40-WWP1.txt  202603110415-KABQ-CXUS45-DSMCQC.txt
crates/emwin-parser/tests/fixtures/ugc/: FLSRAH.txt
docs/: persistence.md  (+9 more)
(+230 files in other folders)
