[workspace]
members = [
    "crates/byteblaster-core",
    "crates/byteblaster-cli",
]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.2.0"
rust-version = "1.88"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bradsjm/byteblaster-rs"
homepage = "https://github.com/bradsjm/byteblaster-rs"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util", "signal"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = "0.1"
bytes = { version = "1", features = ["serde"] }
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
flate2 = "1"
futures = "0.3"
regex = "1"
time = { version = "0.3.47", features = ["parsing", "macros"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tower = "0.5"

[workspace.lints.rust]
unsafe_code = "forbid"

[profile.dist]
inherits = "release"
