[package]
name = "byteblaster-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
default = []
telemetry-serde = []

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
flate2.workspace = true
futures.workspace = true
regex.workspace = true
serde_json.workspace = true
time.workspace = true

[lints]
workspace = true

[dev-dependencies]
proptest = "1"
