[package]
name = "byteblaster-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
default = ["qbt", "wxwire"]
qbt = []
wxwire = [
    "dep:tokio-rustls",
    "dep:rustls-native-certs",
    "dep:base64",
    "dep:minidom",
    "dep:xmpp-parsers",
    "dep:quick-xml",
]
telemetry-serde = []

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
bytes.workspace = true
thiserror.workspace = true
serde.workspace = true
tracing.workspace = true
flate2.workspace = true
futures.workspace = true
regex.workspace = true
serde_json.workspace = true
time.workspace = true
tokio-rustls = { workspace = true, optional = true }
rustls-native-certs = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
minidom = { workspace = true, optional = true }
xmpp-parsers = { workspace = true, optional = true }
quick-xml = { workspace = true, optional = true }

[lints]
workspace = true

[dev-dependencies]
proptest = "1"
