[package]
name = "emwin-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
emwin-protocol = { path = "../emwin-protocol", features = ["telemetry-serde"] }
emwin-parser = { path = "../emwin-parser" }
emwin-db = { path = "../emwin-db" }
chrono.workspace = true
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
axum.workspace = true
tokio-stream.workspace = true
tower-http.workspace = true
bytes.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
zip = { version = "2", default-features = false, features = ["deflate"] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
tower.workspace = true
