[package]
name = "emwin-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"
