[package]
name = "emwin-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
chrono.workspace = true
regex.workspace = true
thiserror.workspace = true

[lints]
workspace = true
