[package]
name = "emwin-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
bstr.workspace = true
chrono.workspace = true
memchr.workspace = true
quick-xml.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
winnow.workspace = true

[dev-dependencies]
[lints]
workspace = true
